adds order number detection

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+index.html
 <!DOCTYPE html>
 <html lang="de">
   <head>
@@ -11,7 +12,7 @@
       }
       video {
         width: 100%;
-        max-height: 60vh;
+        max-height: 40vh;
         background: #000;
       }
       #controls {
@@ -28,6 +29,11 @@
         height: 150px;
         margin-top: 8px;
       }
+    
+      #order-number {
+        display: inline-block;
+        margin-top: 8px;
+      }
     </style>
   </head>
   <body>
@@ -36,17 +42,22 @@
     <div id="controls">
       <button id="start">Start Kamera</button>
       <button id="stop" disabled>Stop</button>
-      <button id="ocr-snap" disabled>OCR (Snapshot)</button>
+      <button id="ocr-snap" disabled>Photo Texterkennung</button>
       <label
-        ><input type="checkbox" id="live-ocr" /> Live OCR (alle 1.5s)</label
+        ><input type="checkbox" id="live-ocr" /> Video Texterkennung (alle
+        1.5s)</label
       >
-      <button id="toggle-torch">Torch an/aus</button>
+      <button id="toggle-torch">Blitzlicht an/aus</button>
     </div>
 
     <textarea
       id="result"
       placeholder="Erkannter Text erscheint hier..."
     ></textarea>
+
+  
+    <input type="text" id="order-number" readonly></input> (zuletzt erkannte Nummer)
+   
 
     <!-- Fallback: Tesseract.js (nur laden wenn gebraucht). CDN-URL kann angepasst werden -->
     <script>
@@ -55,6 +66,7 @@
       const stopBtn = document.getElementById("stop");
       const snapBtn = document.getElementById("ocr-snap");
       const resultEl = document.getElementById("result");
+      const orderNumberEl = document.getElementById("order-number");
       const liveCheckbox = document.getElementById("live-ocr");
       const torchBtn = document.getElementById("toggle-torch");
 
@@ -163,14 +175,13 @@
           document.head.appendChild(s);
         });
         // Erzeuge Worker (langsamer initial load)
-        tesseractWorker = Tesseract.createWorker({
+        // In Tesseract.js v4: createWorker muss korrekt initialisiert werden
+        tesseractWorker = await Tesseract.createWorker({
           logger: (m) => {
             // optional: m.status, m.progress
             // console.log(m);
           },
         });
-        await tesseractWorker.load();
-        // Lade deutsche Sprache falls benötigt: 'deu'. Standard ist 'eng'.
         await tesseractWorker.loadLanguage("deu");
         await tesseractWorker.initialize("deu");
         tesseractLoaded = true;
@@ -193,21 +204,44 @@
 
           // Zuerst native versuchen
           if (usingTextDetector && textDetector) {
-            const t = await runTextDetector(canvas);
-            if (t) {
-              resultEl.value = t;
+            const text = await runTextDetector(canvas);
+            if (text) {
+              analyzeText(text);
               return;
             }
           }
 
           // Fallback Tesseract
           resultEl.value = "OCR läuft (Tesseract) — bitte warten...";
-          const txt = await runTesseract(canvas);
-          resultEl.value = txt || "[kein Text gefunden]";
+          const text = await runTesseract(canvas);
+          if (text) {
+            analyzeText(text);
+          
+          }
+          else {
+            resultEl.value =  "[kein Text gefunden]";
+          }
         } catch (e) {
           console.error(e);
           resultEl.value = "Fehler bei OCR: " + (e.message || e);
         }
+      }
+
+      function analyzeText(text) {
+        resultEl.value = text;
+
+        text.split("\n").forEach((line) => {
+          if (line.includes("KD-Auftrag:")) {
+            const foo = line.split("KD-Auftrag:")[1].trim();
+            const parts = foo.split(" ");
+            // get part with number that ends with a character
+            const orderNumber = parts.find((part) => part.match(/\d+\D/));
+            if (orderNumber) {
+              orderNumberEl.value = orderNumber;
+            }
+          }
+        });
+
       }
 
       // Live OCR throttled
