renames hoffi-store in hoffi-app

--- a/index.html
+++ b/index.html
@@ -2,18 +2,27 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
 
     <!-- Primary Meta Tags -->
-    <title>Hoffi-Store Lagerverwaltung</title>
-    <meta name="title" content="Hoffi-Store Lagerverwaltung" />
-    <meta name="description" content="Lagerverwaltungssystem für metallverarbeitende Betriebe mit OCR-Unterstützung" />
+    <title>Hoffi-App Lagerverwaltung</title>
+    <meta name="title" content="Hoffi-App Lagerverwaltung" />
+    <meta
+      name="description"
+      content="Lagerverwaltungssystem für metallverarbeitende Betriebe mit OCR-Unterstützung"
+    />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <!-- Prevent zoom on iOS -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
+    />
   </head>
   <body>
     <div id="app"></div>
